Tue Mar  6 19:39:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* attributes.[ch] extra.[ch] preproc.c xsltInternals.h
	  transform.[ch]: previous commit broke a lot of stuff, fixing
	  and preparing for next step

Tue Mar  6 19:03:21 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.[ch] Makefile.am templates.[ch] transform.[ch]
	  xsltInternals.h: started working on optimizing stylesheet
	  element parsing. Just builds the extra informations so far.
	* xsltutils.h: added a missing XPath decl

Tue Mar  6 09:52:13 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: William M. Brack found a serious bug
	  with imports and global variables ...

Mon Mar  5 21:51:54 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.[ch] libxslt/transform.c: added 
	  xsltCleanupTemplates() to clean up state left after processing.

Sun Mar  4 19:03:27 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: applied patch from William M. Brack
	  to support with-param in xsltApplyTemplates().

Sun Mar  4 17:53:13 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/pattern.c: fixed the compilation of patterns which
	  contains XPath NodeTypes. Handling of nested predicates.

Sat Mar  3 20:56:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: save ctxt->node after for-each

Thu Mar  1 18:16:58 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt.spec.in: updated to 0.4.0 and 2.3.3
	* doc/xslt.html: updated

Wed Feb 28 19:24:51 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extra.[ch] libxslt/transform.[ch] libxslt/xsltInternals.h:
	  added xsltDocumentElem implementing multiple file output,
	  including 1.1 xsl:document but yet untested.

Wed Feb 28 00:03:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extensions.c: fixed stoopid bug
	* libxslt/Makefile.am libxslt/extra.[ch]: added a new module