@@ -1,3 +1,8 @@
+Wed Mar  7 12:46:09 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
+
+	* libxslt/preproc.c libxslt/transform.c: started rolling in
+	  some of the optimizations.
+
 Tue Mar  6 19:39:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
 
 	* attributes.[ch] extra.[ch] preproc.c xsltInternals.h
